# C

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .gitpod.dockerfile  .gitpod.yml  .travis.yml  5.Infix-Postfix.c  872.c  BST.c  BasicEuclideanAlgorithm  Binary To Decimal.c  BinarySearch.c  BinarySearch_recursive.c  Bogo Sort.c  BubbleSort.c  C  CMakeLists.txt  CONTRIBUTING.md  CodingGuidelines.md  DIRECTORY.md  Dockerfile  Doxyfile  Dynamic programming Algorithm  Fractional_knapsack.c  GREATER NUMBER  Goto statement  Huffman_coding.c  Implement Linked list and its operations  Infix_to_Postfix  LICENSE  Leaky Bucket Simulation  LinearSearch_recursive.c  LongestSubSequence.c  Makefile  Matrix_Multiplication.c  OtherBubbleSort.c  Program for insertion sort  QUARTILE.C  Queens problem C Using Backtracking  (+359 more)
.github/: CODEOWNERS  CONTRIBUTING.md  labeler.yml  pull_request_template.md
8051_HAL/: communication.h  interrupts.h  power.h  timer.h
Another Simple Client Server/: Readme.md
Backtracking/: N-Queens.c  nqueen.c  rat_maze.c
Bit_manipulation/: Addition_using_bits.c  Byte_Swapper.c
CPU Scheduling/: fcfs.c  priority.c  roundrobin.c  sjf_modified.c
Computer Oriented Statistical Methods/: Gauss_Elimination.c  MEAN.C  (+4 more)
audio/: CMakeLists.txt  alaw  alaw.c
client_server/: CMakeLists.txt  UDP_Client.c  UDP_Server.c  bool.h  client.c  fork.h  remote_command_exec_udp_client.c  remote_command_exec_udp_server.c  server.c  tcp_full_duplex_client.c  tcp_full_duplex_server.c  tcp_half_duplex_client.c  tcp_half_duplex_server.c  udp_client.c  udp_server.c
conversions/: AnyToAny.c  CMakeLists.txt  CelsiustoFahrenheit.c  HEXtoBIN.c  Makefile  Octal_to_Binary.c  a.out  binary2octal.c  binary_to_decimal.c  binary_to_hexa.c  binary_to_hexadecimal.c  binary_to_octal.c  c_atoi_str_to_integer.c  celcius_to_fahrenheit.c  celsius_to_fahrenheit.c  char_to_ascii.c  convert_any_base.c  decimal _to_binary.c  decimal2Binary.c  decimal2Hexa.c  decimal2Octal.c  decimal_to_any_base.c  decimal_to_bcd.c  decimal_to_binary.c  decimal_to_binary_recursion.c  decimal_to_binary_without_array.c  decimal_to_hexa.c  decimal_to_octal.c  decimal_to_octal_recursion  decimal_to_octal_recursion.c  from_decimal.c  hexa_to_binary.c  hexa_to_decimal.c  hexa_to_float.c  hexadecimal_to_binary.c  hexadecimal_to_decimal.c  hexadecimal_to_octal.c  hexadecimal_to_octal2.c  hexal_to_octal.c  infix_to_postfix.c  (+11 more)
data_structures/src/: CMakeLists.txt
data_structures/src/list/: sqlist.c
data_structures/test/: CMakeLists.txt  sqlist_test.c
developer_tools/: CMakeLists.txt  malloc_dbg.c  malloc_dbg.h  min_printf.h  minprintf.h  test.c  test_malloc_dbg.c  test_min_printf.c
dynamic_programming/: CMakeLists.txt  LCS.c  Longest_Common_subquince.c  binomial_coeff.c  kadane.c  knapsack.c  lcs.c  longest_common_subsequence.cpp  matrix_chain_multiplication.c  matrix_chain_order.c
games/naval_battle/: CMakeLists.txt
geometry/: CMakeLists.txt  distance.c  geometry_datatypes.h  matrix_3.c  quaternions.c  vectors_3d.c
graphics/: CMakeLists.txt  DDA_Algorithm.c  mandelbrot.c  spirograph.c
numerical_methods/: Armstrong Number in C.c  CMakeLists.txt  GCD & LCM.c  Gauss_Elimination.c  Linear_Regression.c  MEAN.C  Pythagorean_theorem.c  Seidal.C  bisection_method.c  cosx_series.c  durand_kerner_roots.c  factorial.c  factorial_n.c  gauss_elimination.c  gauss_seidel_method.c  lagrange_theorem.C  lagrange_theorem.c  linear_regression.c  lu_decompose.c  matrix_transpose.c  mean.c  median.c  newton-raphson-root.c  newton_raphson_root.c  ode_forward_euler.c  ode_midpoint_euler.c  ode_semi_implicit_euler.c  pt.c  qr_decompose.h  qr_decomposition.c  qr_eigen_values.c  realtime_stats.c  roots.c  secant_method.c  simpsons_1-3rd_rule.c  simpsons_1_3rd_rule.c  square_root.c  variance.c
project_euler/: CMakeLists.txt
project_euler/Problem  09/: sol.c
project_euler/Problem 01/: a.out  sol1.c  sol3.c  sol4.c  sol5.c
project_euler/Problem 02/: so1.c
project_euler/Problem 03/: sol1.c
project_euler/Problem 04/: sol.c
project_euler/Problem 05/: sol.c
project_euler/Problem 06/: sol.c  sol1.c
project_euler/Problem 07/: sol.c
project_euler/Problem 08/: sol.c  sol1.c  sol2.c
project_euler/Problem 09/: sol.c
project_euler/Problem 10/: sol.c  sol1.c  sol10.c  sol2.c
project_euler/Problem 12/: sol.c  sol1.c
project_euler/Problem 13/: sol1.c
project_euler/Problem 14/: sol1.c
project_euler/Problem 15/: sol1.c
project_euler/Problem 20/: sol1.c
project_euler/Problem 21/: sol1.c
project_euler/Problem 22/: sol1.c
project_euler/Problem 23/: sol1.c  sol2.c
project_euler/Problem 25/: sol1.c
project_euler/Problem 26/: sol1.c
project_euler/Problem 401/: sol1.c
project_euler/Problem 5/: solution1.c
project_euler/Problem10/: problem10.c
project_euler/Problem11/: sol.c
project_euler/Project 10/: sol.c
project_euler/problem_1/: sol1.c  sol2.c  sol3.c  sol4.c  sol5.c
project_euler/problem_10/: sol1.c  sol2.c
project_euler/problem_107/: sol1.c
project_euler/problem_11/: sol.c  sol1.c
project_euler/problem_12/: sol1.c
project_euler/problem_13/: num.txt  sol1.c
project_euler/problem_14/: sol1.c
project_euler/problem_15/: sol1.c
project_euler/problem_16/: sol1.c
project_euler/problem_19/: sol1.c
project_euler/problem_2/: so1.c
project_euler/problem_20/: sol1.c
project_euler/problem_21/: sol1.c
project_euler/problem_22/: sol1.c
project_euler/problem_23/: sol1.c  sol2.c
project_euler/problem_24/: sol1
project_euler/problem_25/: sol1.c
project_euler/problem_26/: sol1.c
project_euler/problem_3/: sol1.c  sol2.c
project_euler/problem_4/: sol.c
project_euler/problem_401/: sol1.c
project_euler/problem_5/: sol.c  sol1.c  sol2.c  sol3.c
project_euler/problem_59/: sol1.c
project_euler/problem_6/: sol.c
project_euler/problem_7/: sol.c  sol2.c
project_euler/problem_8/: sol1.c  sol2.c
project_euler/problem_9/: sol1.c  sol2.c
searching/pattern_search/: CMakeLists.txt  Linear time pattern searching Algorithm.c  Makefile  boyer_moore_search.c  naive_search.c  rabin_karp_search.c
(+3073 files in other folders)
